--- a/charles.wong/src/main/resources/templates/details.html
+++ b/charles.wong/src/main/resources/templates/details.html
@@ -11,6 +11,6 @@
 <p th:text="'Content: ' + ${article.content}"></p>
 <p th:text="'Reporter: ' + ${article.reporter}"></p>
 <p th:text="'Email: ' + ${article.email}"></p>
-<a href="/">Back to Index</a>
+<a href="/articles">Back to Articles List</a>
 </body>
 </html>
