--- a/charles.wong/src/main/resources/templates/new.html
+++ b/charles.wong/src/main/resources/templates/new.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Add New Article</title>
+    <title>New Article</title>
 </head>
 <body>
-<h1>Add New Article</h1>
-<form action="/save" method="post" th:object="${article}">
-    <input type="text" th:field="*{title}" placeholder="Title"/>
-    <input type="text" th:field="*{name}" placeholder="Name"/>
-    <input type="text" th:field="*{category}" placeholder="Category"/>
-    <textarea th:field="*{content}" placeholder="Content"></textarea>
-    <input type="text" th:field="*{reporter}" placeholder="Reporter"/>
-    <input type="email" th:field="*{email}" placeholder="Email"/>
-    <button type="submit">Save</button>
+<h1>Create New Article</h1>
+<form action="#" th:action="@{/articles}" th:object="${article}" method="post">
+    <label for="title">Title:</label>
+    <input type="text" id="title" th:field="*{title}" /><br/>
+
+    <label for="name">Name:</label>
+    <input type="text" id="name" th:field="*{name}" /><br/>
+
+    <label for="category">Category:</label>
+    <input type="text" id="category" th:field="*{category}" /><br/>
+
+    <label for="content">Content:</label>
+    <textarea id="content" th:field="*{content}"></textarea><br/>
+
+    <label for="reporter">Reporter:</label>
+    <input type="text" id="reporter" th:field="*{reporter}" /><br/>
+
+    <label for="email">Email:</label>
+    <input type="email" id="email" th:field="*{email}" /><br/>
+
+    <button type="submit">Submit</button>
 </form>
 </body>
 </html>
