--- a/charles.wong/src/main/resources/templates/new.html
+++ b/charles.wong/src/main/resources/templates/new.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <div class="wrapper">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/articles">Home</a>
+    <nav class="navbar">
+        <a class="navbar-brand" href="/articles">Anderlechtse gazette</a>
         <a class="nav-link" href="/articles/new">New Article</a>
         <a class="nav-link" href="/articles/about">About</a>
         <div class="ml-auto">
