redundantie fix, column voor artikel, fragments voor navbar en footer

--- a/charles.wong/src/main/resources/templates/details.html
+++ b/charles.wong/src/main/resources/templates/details.html
@@ -9,17 +9,7 @@
 </head>
 <body>
 <div class="wrapper">
-    <nav class="navbar">
-        <a class="navbar-brand" href="/articles" th:text="#{app.title}">Anderlechtse gazette</a>
-        <a class="nav-link" href="/articles/new" th:text="#{nav.newArticle}">New Article</a>
-        <a class="nav-link" href="/articles/about" th:text="#{nav.about}">About</a>
-        <div class="ml-auto">
-            <label class="switch">
-                <input type="checkbox" id="darkModeToggle" onchange="toggleDarkMode()">
-                <span class="slider round"></span>
-            </label>
-        </div>
-    </nav>
+    <div th:replace="fragments/navbar :: navbar"></div>
     <div class="container mt-4 content">
         <h1 th:text="#{article.details}">Article Details</h1>
         <p><strong th:text="#{form.label.title}">Title:</strong> <span th:text="${article.title}"></span></p>
@@ -31,9 +21,7 @@
         <a href="/articles" class="btn btn-secondary" th:text="#{nav.home}">Back to Articles List</a>
     </div>
     <footer class="footer">
-        <div class="container text-center">
-            <p th:text="#{footer.copy}">&copy; 2024 De Anderlechtse Gazet</p>
-        </div>
+        <div th:replace="fragments/footer :: footer"></div>
     </footer>
 </div>
 </body>
