--- a/charles.wong/src/main/resources/templates/index.html
+++ b/charles.wong/src/main/resources/templates/index.html
@@ -10,18 +10,7 @@
 </head>
 <body>
 <div class="wrapper">
-    <div class="wrapper">
-        <nav class="navbar">
-            <a class="navbar-brand" href="/articles" th:text="#{app.title}">Anderlechtse gazette</a>
-            <a class="nav-link" href="/articles/new" th:text="#{nav.newArticle}">New Article</a>
-            <a class="nav-link" href="/articles/about" th:text="#{nav.about}">About</a>
-            <div class="ml-auto">
-                <label class="switch">
-                    <input type="checkbox" id="darkModeToggle" onchange="toggleDarkMode()">
-                    <span class="slider round"></span>
-                </label>
-            </div>
-        </nav>
+    <div th:replace="fragments/navbar :: navbar"></div>
     <div class="container mt-4 content">
         <h1>Latest News</h1>
         <table class="table">
@@ -45,9 +34,7 @@
         <a href="/articles/new" class="btn btn-primary">Add New Article</a>
     </div>
     <footer class="footer">
-        <div class="container text-center">
-            <p>&copy; 2024 De Anderlechtse Gazet</p>
-        </div>
+        <div th:replace="fragments/footer :: footer"></div>
     </footer>
 </div>
 </div>
