--- a/charles.wong/src/main/resources/templates/index.html
+++ b/charles.wong/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="wrapper">
-    <div th:replace="fragments/navbar :: navbar"></div>
+    <div th:replace="~{fragments/navbar :: navbar}"></div>
     <div class="container mt-4 content">
         <h1>Latest News</h1>
         <table class="table">
@@ -34,7 +34,7 @@
         <a href="/articles/new" class="btn btn-primary">Add New Article</a>
     </div>
     <footer class="footer">
-        <div th:replace="fragments/footer :: footer"></div>
+        <div th:replace="~{fragments/footer :: footer}"></div>
     </footer>
 </div>
 </div>
